Grid capacity updated -

--- a/3. Future Scenario - Electrified/2. Code/Model.ipynb
+++ b/3. Future Scenario - Electrified/2. Code/Model.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "##### Created on: 25.12.2023\n",
-    "##### Last updated on: 06.02.2024\n",
+    "##### Last updated on: 14.02.2024\n",
     "##### Version: 07\n",
     "\n",
     "##### Developed by: Taha Ahmed Siddiqui (tahaahmedsiddiqui@outlook.com) and Hareem Taha (hareem.nadeem10@gmail.com)\n",
@@ -171,10 +171,10 @@
     "EM.AnnualEmissionLimit = pyo.Param(EM.Year, default=float('inf'), initialize=readin_annualemissionlimit)\n",
     "\n",
     "#for grid capacity\n",
-    "EM.GridCapacity = pyo.Param(initialize = 500)\n",
+    "EM.GridCapacity = pyo.Param(initialize = 725)\n",
     "\n",
     "#for economics\n",
-    "EM.DiscountRate = pyo.Param(initialize = 0.05)\n",
+    "EM.DiscountRate = pyo.Param(initialize = 0.03)\n",
     "EM.YearlyDifferenceMultiplier = pyo.Param(EM.Year, initialize=YearlyDifferenceMultiplier)"
    ]
   },
@@ -470,7 +470,7 @@
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'x5019768', 'Lower bound': 65191.31666581197, 'Upper bound': 65191.32245782204, 'Number of objectives': 1, 'Number of constraints': 5203719, 'Number of variables': 5019768, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5019735, 'Number of nonzeros': 15825921, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '1174.606999874115', 'Error rc': 0, 'Time': 1218.2006607055664}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'x5019768', 'Lower bound': 67216.75547245123, 'Upper bound': 67216.75547245123, 'Number of objectives': 1, 'Number of constraints': 5203719, 'Number of variables': 5019768, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5019735, 'Number of nonzeros': 15825921, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '1019.1080000400543', 'Error rc': 0, 'Time': 1055.9711246490479}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
      "execution_count": 11,
@@ -513,15 +513,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3972.671862082191\n",
-      "139417.7309100003\n",
+      "3972.5852336622\n",
+      "139374.41670000082\n",
       "0.0\n"
      ]
     }
@@ -611,6 +611,16 @@
     "#getting variable costs hourly profile for each year\n",
     "TotalVariableCost = TotalVariableCost[TotalVariableCost['Technology'].isin(technologies_list)]\n",
     "\n",
+    "#getting annual curtailment profiles\n",
+    "PowerCurtailment = Curtailment[Curtailment['Fuel'] == 'Power']\n",
+    "YearlyPowerCurtailment = PowerCurtailment.drop(columns=['Fuel','Hour'], axis=1).groupby(['Year']).sum()\n",
+    "\n",
+    "#Variablecosts --total and hourlyaverages in $/kWh of energy generation\n",
+    "HourlyVariableCost = TotalVariableCost.drop(columns=['Technology'], axis=1).groupby(['Year','Hour']).sum()\n",
+    "ProductionforVariableCost = ProductionByTechnology[ProductionByTechnology['Technology'].isin(technologies_list)]\n",
+    "SumProductionforVariableCost = ProductionforVariableCost.drop(columns=['Technology','Fuel'], axis=1).groupby(['Year','Hour']).sum()\n",
+    "AnnualTotalVariableCosts = HourlyVariableCost.droplevel(1, axis=0).groupby(['Year']).sum()\n",
+    "AverageVariableCostTimeseries = HourlyVariableCost['Value']/SumProductionforVariableCost['Value']\n",
     "\n",
     "#writing our output values to csv files in the results subfolder\n",
     "EnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\n",
@@ -620,7 +630,9 @@
     "Curtailment.to_csv('../3. Output/Curtailment.csv',index=False)\n",
     "StorageCapacity.to_csv('../3. Output/StorageCapacity.csv', index=False)\n",
     "TotalAnnualCapitalCosts.to_csv('../3. Output/TotalAnnualCapacityCosts.csv', index=False)\n",
-    "#TotalVariableCost.to_csv('../3. Output/AnnualVariableCost.csv', index=True)\n",
+    "YearlyPowerCurtailment.to_csv('../3. Output/YearlyPowerCurtailment.csv',index=True)\n",
+    "AnnualTotalVariableCosts.to_csv('../3. Output/AnnualTotalVariableCosts.csv', index=True)\n",
+    "AverageVariableCostTimeseries.to_csv('../3. Output/AverageVariableCostTimeseries.csv', index=True)\n",
     "\n",
     "print(sum(instance.AnnualTechnologyEmissions.extract_values().values()))\n",
     "print(sum(instance.Curtailment.extract_values().values()))\n",
@@ -629,81 +641,6 @@
     "non_zero_values\n",
     "sum(instance.InfeasibleGeneration.extract_values().values())\n",
     "print(max(instance.InfeasibleGeneration.extract_values().values()))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Value\n",
-      "Year             \n",
-      "2026 -32563.64905\n",
-      "2028 -27577.29070\n",
-      "2030 -79276.79116\n"
-     ]
-    }
-   ],
-   "source": [
-    "#getting annual curtailment profiles\n",
-    "\n",
-    "PowerCurtailment = Curtailment[Curtailment['Fuel'] == 'Power']\n",
-    "YearlyPowerCurtailment = PowerCurtailment.drop(columns=['Fuel','Hour'], axis=1).groupby(['Year']).sum()\n",
-    "print(YearlyPowerCurtailment)\n",
-    "YearlyPowerCurtailment.to_csv('../3. Output/YearlyPowerCurtailment.csv',index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Variablecosts --total and hourlyaverages in $/kWh of energy generation\n",
-    "\n",
-    "HourlyVariableCost = TotalVariableCost.drop(columns=['Technology'], axis=1).groupby(['Year','Hour']).sum()\n",
-    "#print(HourlyVariableCost)\n",
-    "ProductionforVariableCost = ProductionByTechnology[ProductionByTechnology['Technology'].isin(technologies_list)]\n",
-    "SumProductionforVariableCost = ProductionforVariableCost.drop(columns=['Technology','Fuel'], axis=1).groupby(['Year','Hour']).sum()\n",
-    "#print(SumProductionforVariableCost)\n",
-    "AnnualTotalVariableCosts = HourlyVariableCost.droplevel(1, axis=0).groupby(['Year']).sum()\n",
-    "#print(AnnualTotalVariableCosts)\n",
-    "AverageVariableCostTimeseries = HourlyVariableCost['Value']/SumProductionforVariableCost['Value']\n",
-    "#print(AverageVariableCostTimeseries)\n",
-    "\n",
-    "AnnualTotalVariableCosts.to_csv('../3. Output/AnnualTotalVariableCosts.csv', index=True)\n",
-    "AverageVariableCostTimeseries.to_csv('../3. Output/AverageVariableCostTimeseries.csv', index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Year  Technology      \n",
-      "2026  ElectricHeatPump    402034.37989\n",
-      "      WoodBurner          677678.03495\n",
-      "2028  ElectricHeatPump    383017.87807\n",
-      "      WoodBurner          736525.74839\n",
-      "2030  ElectricHeatPump    587677.46386\n",
-      "      WoodBurner          572005.35266\n",
-      "Name: Value, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "#seeing the proportion of heat load served between electricheatpump and wood/conventionalfuelburners\n",
-    "Heatloadserved = ProductionByTechnology[ProductionByTechnology['Technology'].isin(['ElectricHeatPump','WoodBurner'])]\n",
-    "TotalHeatLoad = Heatloadserved.groupby(['Year','Technology'])['Value'].sum()\n",
-    "print(TotalHeatLoad)"
    ]
   },
   {
@@ -725,6 +662,11 @@
    "source": [
     "'''\n",
     "#scrap yard\n",
+    "#seeing the proportion of heat load served between electricheatpump and wood/conventionalfuelburners\n",
+    "Heatloadserved = ProductionByTechnology[ProductionByTechnology['Technology'].isin(['ElectricHeatPump','WoodBurner'])]\n",
+    "TotalHeatLoad = Heatloadserved.groupby(['Year','Technology'])['Value'].sum()\n",
+    "print(TotalHeatLoad)\n",
+    "\n",
     "def curtailmentdischargelimit(EM,h):\n",
     "    return EM.CurtailmentState[h] + EM.BatteryChargeState[h] <= 1\n",
     "\n",
