Troubleshooting .. runtime 27 min
- hydro capacity factor updated
- demands updated
- demand profile updated

--- a/3. Future Scenario - Electrified/2. Code/Model.ipynb
+++ b/3. Future Scenario - Electrified/2. Code/Model.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'x5019768', 'Lower bound': 67216.75547245123, 'Upper bound': 67216.75547245123, 'Number of objectives': 1, 'Number of constraints': 5203719, 'Number of variables': 5019768, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5019735, 'Number of nonzeros': 15825921, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '1124.398999929428', 'Error rc': 0, 'Time': 1165.630039691925}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'x5019768', 'Lower bound': 118088.79995056133, 'Upper bound': 118088.9235305271, 'Number of objectives': 1, 'Number of constraints': 5203719, 'Number of variables': 5019768, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5019735, 'Number of nonzeros': 15818349, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '1340.0430002212524', 'Error rc': 0, 'Time': 1379.617097377777}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,15 +513,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3972.5852336622\n",
-      "139374.41670000082\n",
+      "4835.170530139703\n",
+      "598749.4775938025\n",
       "0.0\n"
      ]
     }
@@ -644,7 +644,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year  Technology      \n",
+      "2026  ElectricHeatPump    230687.362602\n",
+      "      WoodBurner          849099.233673\n",
+      "2028  ElectricHeatPump    232784.685868\n",
+      "      WoodBurner          886835.858624\n",
+      "2030  ElectricHeatPump    488551.214516\n",
+      "      WoodBurner          671211.277791\n",
+      "Name: Value, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#seeing the proportion of heat load served between electricheatpump and wood/conventionalfuelburners\n",
+    "Heatloadserved = ProductionByTechnology[ProductionByTechnology['Technology'].isin(['ElectricHeatPump','WoodBurner'])]\n",
+    "TotalHeatLoad = Heatloadserved.groupby(['Year','Technology'])['Value'].sum()\n",
+    "print(TotalHeatLoad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +680,7 @@
        "\"\\n#useful scrap\\nProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCapacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nDemand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\nUse = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCurtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\nStorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\nTotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\nStorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\nStorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,10 +688,7 @@
    "source": [
     "'''\n",
     "#scrap yard\n",
-    "#seeing the proportion of heat load served between electricheatpump and wood/conventionalfuelburners\n",
-    "Heatloadserved = ProductionByTechnology[ProductionByTechnology['Technology'].isin(['ElectricHeatPump','WoodBurner'])]\n",
-    "TotalHeatLoad = Heatloadserved.groupby(['Year','Technology'])['Value'].sum()\n",
-    "print(TotalHeatLoad)\n",
+    "\n",
     "\n",
     "def curtailmentdischargelimit(EM,h):\n",
     "    return EM.CurtailmentState[h] + EM.BatteryChargeState[h] <= 1\n",
